# Rover_modelado-simulaci-n

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/rover_description/share/rover_description/: package.sh  package.xml
ros2_ws/install/rover_description/share/rover_description/launch/: robot_state_publisher.launch.py
ros2_ws/install/rover_description/share/rover_description/meshes/dae/: Cube.001.dae  Cube.124.dae  Cube.125.dae  Cylinder.001.dae  Cylinder.002.dae  Cylinder.006.dae  Cylinder.007.dae  Cylinder.008.dae  Cylinder.010.dae  Cylinder.dae  Torus.005.dae  Torus.008.dae  Torus.011.dae  Torus.012.dae
ros2_ws/install/rover_description/share/rover_description/robots/: final_rover.urdf.xacro
ros2_ws/install/rover_description/share/rover_description/rviz/: robot.rviz  robot_moveit.rviz
ros2_ws/install/rover_description/share/rover_description/urdf/sensors/: camera_arm.urdf.xacro  imu_sensor.urdf.xacro
ros2_ws/install/rover_description/share/rover_description/urdf/wheels/: rover_wheel.urdf.xacro
ros2_ws/log/: latest_build
ros2_ws/src/rover_bringup/: CMakeLists.txt
ros2_ws/src/rover_bringup/launch/: robot_gazebo.launch.py
ros2_ws/src/rover_description/: CMakeLists.txt
ros2_ws/src/rover_description/config/: robot_controllers.yaml
ros2_ws/src/rover_description/launch/: launch.py
ros2_ws/src/rover_description/rviz/: rover.rviz
ros2_ws/src/rover_description/urdf/: cube.urdf  ros2_control.urdf.xacro
rosbags/: plot.py
rosbags/green+10m/: metadata.yaml
rosbags/redblue/: metadata.yaml
(+45 files in other folders)
